--- a/index.html
+++ b/index.html
@@ -14,23 +14,57 @@
       flex-direction: column;
       align-items: center;
     }
-    #card {
-      background: #ffffff;
+    #card-wrapper {
+      perspective: 1000px;
+      width: 90%;
+      max-width: 400px;
+      height: 220px;
+    }
+
+    .card {
+      width: 100%;
+      height: 100%;
+      position: relative;
+    }
+
+    .card-inner {
+      width: 100%;
+      height: 100%;
+      position: relative;
+      transform-style: preserve-3d;
+      transition: transform 0.6s ease-in-out;
+    }
+
+    .card.flipped .card-inner {
+      transform: rotateY(180deg);
+    }
+
+    .card-face {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      backface-visibility: hidden;
       border-radius: 1.5rem;
       padding: 2rem;
       box-shadow: 0 6px 20px rgba(0,0,0,0.3);
-      width: 90%;
-      max-width: 400px;
-      text-align: center;
+      display: flex;
+      align-items: center;
+      justify-content: center;
       font-size: 1.6rem;
-      cursor: pointer;
+      text-align: center;
       color: #333;
-      border: 3px solid #007bff;
-      transition: background 0.3s ease;
+      background: #fff;
     }
-    #card:hover {
-      background: #e3f2fd;
+
+    .card-face.back {
+      transform: rotateY(180deg);
+      background-color: #e3f2fd;
     }
+
+    .card-face.front {
+      background-color: #ffffff;
+    }
+
     button {
       background-color: #007bff;
       border: none;
@@ -38,13 +72,16 @@
       padding: 0.7rem 1.2rem;
       border-radius: 0.5rem;
       font-size: 1rem;
-      margin: 0.5rem;
+      margin: 1.5rem auto 0;
       cursor: pointer;
       transition: background-color 0.2s ease;
+      display: block;
     }
+
     button:hover {
       background-color: #0056b3;
     }
+
     select {
       margin-bottom: 1rem;
       font-size: 1rem;
@@ -53,75 +90,29 @@
       border: 1px solid #ccc;
     }
 
-  .category-Gesondheet { border-color: #2196f3; }
-  .category-Famill { border-color: #4caf50; }
-  .category-Arbecht { border-color: #ff9800; }
-  .category-Sproochentest { border-color: #9c27b0; }
+    .category-Gesondheet { border-color: #2196f3; }
+    .category-Famill { border-color: #4caf50; }
+    .category-Arbecht { border-color: #ff9800; }
+    .category-Sproochentest { border-color: #9c27b0; }
 
-  body.dark {
-    background: #121212;
-    color: #e0e0e0;
-  }
+    body.dark {
+      background: #121212;
+      color: #e0e0e0;
+    }
 
-  body.dark #card {
-    background: #1e1e1e;
-    color: #e0e0e0;
-    border-color: #444;
-  }
+    body.dark .card-face {
+      background: #1e1e1e;
+      color: #e0e0e0;
+      border: 3px solid #444;
+    }
 
-  body.dark select,
-  body.dark button {
-    background-color: #333;
-    color: #fff;
-    border: 1px solid #555;
-  }
-
-  #card-wrapper {
-    perspective: 1000px;
-    width: 90%;
-    max-width: 400px;
-  }
-
-  #card {
-    transition: transform 0.6s;
-    transform-style: preserve-3d;
-    position: relative;
-    min-height: 150px;
-  }
-
-  .flipped {
-    transform: rotateY(180deg);
-  }
-
-  .card-face {
-    position: absolute;
-    width: 100%;
-    backface-visibility: hidden;
-    border-radius: 1.5rem;
-    padding: 2rem;
-    box-shadow: 0 6px 20px rgba(0,0,0,0.3);
-    background: #fff;
-  }
-
-  .back {
-    transform: rotateY(180deg);
-  }
-
-  body.dark .card-face {
-    background: #1e1e1e;
-    color: #e0e0e0;
-    border: 3px solid #444;
-  }
-
-.card-face.front {
-  background-color: #ffffff;
-}
-
-.card-face.back {
-  background-color: #e3f2fd;
-}
-</style>
-
+    body.dark select,
+    body.dark button {
+      background-color: #333;
+      color: #fff;
+      border: 1px solid #555;
+    }
+  </style>
   <link rel="manifest" href="manifest.json">
   <script>
     if ('serviceWorker' in navigator) {
@@ -131,13 +122,11 @@
     }
   </script>
 </head>
-
 <body>
 
 <label style="margin: 1rem;">
   <input type="checkbox" id="darkModeToggle" onchange="toggleDarkMode()"> 🌙 Dark Mode
 </label>
-
 
 <h2>🇱🇺 Sproochentest Flashcards</h2>
 
@@ -145,24 +134,28 @@
   <option value="All">All Categories</option>
 </select>
 
-
-<div id="card-wrapper">
-  <div id="card">
-    <div id="front" class="card-face front">Loading...</div>
-    <div id="back" class="card-face back">Loading...</div>
+<div id="card-wrapper" onclick="flipCard()">
+  <div class="card" id="card">
+    <div class="card-inner" id="card-inner">
+      <div id="front" class="card-face front">Loading...</div>
+      <div id="back" class="card-face back">Loading...</div>
+    </div>
   </div>
 </div>
 
-
-<div id="buttons">
-  <button onclick="nextCard()">Next</button>
-</div>
+<div style="margin-top: 2.5rem;"><button onclick="nextCard()">Next</button></div>
 
 <script>
   let flashcards = [];
   let filteredCards = [];
   let index = 0;
-  let showingFront = true;
+
+  const categoryIcons = {
+    'Gesondheet': '🩺',
+    'Famill': '👨‍👩‍👧',
+    'Arbecht': '💼',
+    'Sproochentest': '🇱🇺'
+  };
 
   async function fetchData() {
     const res = await fetch("https://sheets.googleapis.com/v4/spreadsheets/1QD8T3qsp2djYjXBiOcaSt71WKXvBaYAq0HRg08u3oqA/values/Sheet1?key=AIzaSyDgFZcT-kgdg3aps-p2uCMDAqxTVOHm1Ao");
@@ -175,122 +168,60 @@
     const backIdx = headers.findIndex(h => h.toLowerCase().includes("back"));
     const catIdx = headers.findIndex(h => h.toLowerCase().includes("category"));
 
-    flashcards = rows.map(row => {
-      return {
-        Front: row[frontIdx] || "",
-        Back: row[backIdx] || "",
-        Category: row[catIdx] || ""
-      };
-    });
+    flashcards = rows.map(row => ({
+      Front: row[frontIdx] || "",
+      Back: row[backIdx] || "",
+      Category: row[catIdx] || ""
+    }));
 
     populateCategories();
     filterByCategory();
   }
 
   function populateCategories() {
-    const categorySelect = document.getElementById("categorySelect");
+    const select = document.getElementById("categorySelect");
     const categories = ["All", ...new Set(flashcards.map(c => c.Category).filter(Boolean))];
-    categorySelect.innerHTML = "";
+    select.innerHTML = "";
     categories.forEach(cat => {
       const opt = document.createElement("option");
       opt.value = cat;
       opt.textContent = cat;
-      categorySelect.appendChild(opt);
+      select.appendChild(opt);
     });
   }
 
-  
-  
-
-  const categoryIcons = {
-    'Gesondheet': '🩺',
-    'Famill': '👨‍👩‍👧',
-    'Arbecht': '💼',
-    'Sproochentest': '🇱🇺'
-  };
-
-
-function showCard() {
-  const frontEl = document.getElementById("front");
-  const backEl = document.getElementById("back");
-  const card = filteredCards[index];
-
-  if (!card) {
-    frontEl.textContent = "No cards found.";
-    backEl.textContent = "";
-    return;
-  }
-
-  const icon = categoryIcons[card.Category] || '';
-  frontEl.textContent = icon + " " + card.Front;
-  backEl.textContent = icon + " " + card.Back;
-
-  document.getElementById("card").className = "category-" + (card.Category || "").replace(/\s+/g, '');
-}
-
-function flipCard() {
-  const cardEl = document.getElementById("card");
-  cardEl.classList.toggle('flipped');
-}
-
-function nextCard() {
-  if (filteredCards.length === 0) return;
-  index = (index + 1) % filteredCards.length;
-  const cardEl = document.getElementById("card");
-  cardEl.classList.remove('flipped');
-  showingFront = true;
-  showCard();
-}
-
-function toggleDarkMode() {
-    document.body.classList.toggle('dark');
-  }
-
   function showCard() {
-    const cardEl = document.getElementById("card");
-    if (filteredCards.length === 0) {
-      cardEl.textContent = "No cards found.";
-      cardEl.className = "";
-      return;
-    }
     const card = filteredCards[index];
-    cardEl.textContent = showingFront ? card.Front : card.Back;
+    const icon = categoryIcons[card.Category] || '';
+    document.getElementById("front").textContent = icon + " " + card.Front;
+    document.getElementById("back").textContent = icon + " " + card.Back;
 
-    // Set category-based class
-    cardEl.className = "category-" + (card.Category || "").replace(/\s+/g, '');
-  }
-
-function showCard() {
     const cardEl = document.getElementById("card");
-    if (filteredCards.length === 0) {
-      cardEl.textContent = "No cards found.";
-      return;
-    }
-    const card = filteredCards[index];
-    cardEl.textContent = showingFront ? card.Front : card.Back;
+    cardEl.className = "card category-" + (card.Category || "").replace(/\s+/g, '');
   }
 
   function flipCard() {
-    showingFront = !showingFront;
-    showCard();
+    document.getElementById("card").classList.toggle("flipped");
   }
 
   function nextCard() {
     if (filteredCards.length === 0) return;
     index = (index + 1) % filteredCards.length;
-    showingFront = true;
+    document.getElementById("card").classList.remove("flipped");
     showCard();
+  }
+
+  function toggleDarkMode() {
+    document.body.classList.toggle('dark');
   }
 
   function filterByCategory() {
     const selected = document.getElementById("categorySelect").value;
     filteredCards = selected === "All" ? [...flashcards] : flashcards.filter(c => c.Category === selected);
     index = 0;
-    showingFront = true;
     showCard();
   }
 
-  document.getElementById("card-wrapper").addEventListener("click", flipCard);
   fetchData();
 </script>
 
