--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     }
     .card-face.back {
       transform: rotateY(180deg);
-      background-color: #e3f2fd;
+      background-color: #fff9c4;
     }
     .card-face.front {
       background-color: #ffffff;
