--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 </style>
 </head>
 <body>
-<h2>🇱🇺 Sproochentest Flashcards</h2>
+<h2>🇱🇺 SproochenTest Flashcards</h2>
 <div style="margin: 1rem 0; text-align: center;">
   <label style="margin-bottom: 0.5rem; display: block;">
     <input id="randomToggle" onchange="toggleRandomMode()" type="checkbox"/> 🔀 Random Mode
